# transcript_tool

./: README.md  pyproject.toml
src/: main.py
