[project]
name = "transcript_tool"
version = "0.1.0"
description = "A quick python script made for bulk transcribing audio files off of my audio recorder."
authors = [
    {name = "Lucy Awrey",email = "35198881+lucyawrey@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pywhispercpp (>=1.3.3,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
